fix horizontal scrollbar appearing

--- a/src/backend/public/style.css
+++ b/src/backend/public/style.css
@@ -171,6 +171,5 @@ button {
 .header,
 #message-send-container {
   display: flex;
-  width: 100%; /* They take the full width of their container */
   flex-shrink: 1; /* Allow shrinkage when necessary */
 }
